<resources>
    <string name="app_name">NewsHub</string>
    <string name="app_description">"NewsHub: Stay Updated" is a comprehensive Android app leveraging the power of NewsAPI.org. Discover the latest top headlines and explore news articles across various categories. Seamlessly search for specific topics of interest and save articles to your bookmarks for convenient access later. With NewsHub, you can personalize your news consumption and stay informed about global events. The app offers a user-friendly interface, real-time updates, and a wide range of news sources. Stay updated with the world at your fingertips.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NewsHub</string>
    <string name="nav_header_subtitle">Your Source for Real-Time News</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <!-- Preference Titles -->
    <string name="settings_general_header">General</string>
    <string name="display_header">Display</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="settings_language">News Language</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="latest_news">Latest News</string>
    <string name="news_category_title">%1s News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Categories Labels-->
    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_science">Science</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>
    <string name="read_more">Read More</string>
    <string name="details_template">%1s%2s</string>
    <string name="details_date_template">%1s, %2s %3d, %4d - %5s</string>
    <string name="country">Country</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="no_internet_connection_available">No Internet Connection Available</string>
    <string name="retry">Retry</string>
    <string name="a_few_seconds_ago">a few seconds ago</string>
    <string name="home_minute_count">%1d minutes ago</string>
    <string name="home_hour_count">%1d hours age</string>
    <string name="home_yesterday">Yesterday</string>
    <string name="home_last_day">Last %1s</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="settings_locale">Locale</string>
    <string name="about_connect_group">Connect with us</string>
</resources>